--- a/ClassLibrary2/Backend.csproj
+++ b/ClassLibrary2/Backend.csproj
@@ -50,7 +50,10 @@
     <Compile Include="Basicas\Vacina.cs" />
     <Compile Include="Basicas\Vacinacao.cs" />
     <Compile Include="Basicas\Veterinario.cs" />
+    <Compile Include="Dados\ClienteDao.cs" />
+    <Compile Include="Dados\ClienteDaoImp.cs" />
     <Compile Include="Erro\GeralException.cs" />
+    <Compile Include="Negocio\ClienteController.cs" />
     <Compile Include="Util\Conexao.cs" />
     <Compile Include="Erro\ConexaoException.cs" />
     <Compile Include="Erro\DaoException.cs" />
