--- a/ClassLibrary2/Backend.csproj
+++ b/ClassLibrary2/Backend.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Basicas\Cliente.cs" />
     <Compile Include="Basicas\Doenca.cs" />
     <Compile Include="Basicas\Dose.cs" />
+    <Compile Include="Basicas\DoseVacina.cs" />
     <Compile Include="Basicas\Especie.cs" />
     <Compile Include="Basicas\Periodicidade.cs" />
     <Compile Include="Basicas\Permissao.cs" />
@@ -50,7 +51,16 @@
     <Compile Include="Basicas\Vacina.cs" />
     <Compile Include="Basicas\Vacinacao.cs" />
     <Compile Include="Basicas\Veterinario.cs" />
+    <Compile Include="Dados\AnimalDaoImp.cs" />
+    <Compile Include="Dados\DoseDao.cs" />
+    <Compile Include="Dados\DoseDaoImp.cs" />
+    <Compile Include="Dados\EspecieDaoImp.cs" />
+    <Compile Include="Dados\VacinacaoDao.cs" />
+    <Compile Include="Dados\VacinacaoDaoImp.cs" />
+    <Compile Include="Dados\VeterinarioDaoImp.cs" />
     <Compile Include="Erro\GeralException.cs" />
+    <Compile Include="Negocio\DoseController.cs" />
+    <Compile Include="Negocio\VacinacaoController.cs" />
     <Compile Include="Util\Conexao.cs" />
     <Compile Include="Erro\ConexaoException.cs" />
     <Compile Include="Erro\DaoException.cs" />
