--- a/ClassLibrary2/Backend.csproj
+++ b/ClassLibrary2/Backend.csproj
@@ -51,28 +51,29 @@
     <Compile Include="Basicas\Vacina.cs" />
     <Compile Include="Basicas\Vacinacao.cs" />
     <Compile Include="Basicas\Veterinario.cs" />
-	<Compile Include="Dados\AnimalDaoImp.cs" />
+    <Compile Include="Dados\AnimalDaoImp.cs" />
     <Compile Include="Dados\DoseDao.cs" />
     <Compile Include="Dados\DoseDaoImp.cs" />
     <Compile Include="Dados\EspecieDaoImp.cs" />
     <Compile Include="Dados\VacinacaoDao.cs" />
     <Compile Include="Dados\VacinacaoDaoImp.cs" />
     <Compile Include="Dados\VeterinarioDaoImp.cs" />
+    <Compile Include="Erro\GeralException.cs" />
+    <Compile Include="Fachada.cs" />
+    <Compile Include="Negocio\AnimalController.cs" />
     <Compile Include="Negocio\DoseController.cs" />
+    <Compile Include="Negocio\EspecieController.cs" />
     <Compile Include="Negocio\VacinacaoController.cs" />
     <Compile Include="Dados\ClienteDao.cs" />
     <Compile Include="Dados\ClienteDaoImp.cs" />
     <Compile Include="Dados\EspecieDao.cs" />
-    <Compile Include="Erro\GeralException.cs" />
     <Compile Include="Negocio\ClienteController.cs" />
     <Compile Include="Dados\VacinaDao.cs" />
     <Compile Include="Dados\VacinaDaoImp.cs" />
-    <Compile Include="Erro\GeralException.cs" />
     <Compile Include="Negocio\VacinaController.cs" />
     <Compile Include="Util\Conexao.cs" />
     <Compile Include="Erro\ConexaoException.cs" />
     <Compile Include="Erro\DaoException.cs" />
-    <Compile Include="Util\Fachada.cs" />
     <Compile Include="Dados\UsuarioDao.cs" />
     <Compile Include="Dados\UsuarioDaoImp.cs" />
     <Compile Include="Negocio\UsuarioController.cs" />
